--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 
+
 ## Environment normalization:
 /.bundle
 /vendor/bundle
@@ -176,3 +177,6 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Ignore application configuration
+/config/application.yml
